# final_lpiweb

./: Integrated5_fold.py  README.md  Requirements.txt  comp.csv  gcn.py  krenel.py  loocv.py  main.py  metrics.py  omic_learn_2.py  pyproject.toml  requirements.txt  requiremwnts.txt  s5_fold.py  ui_helper.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: omic_learn_tests.yml
casestudy/: lnc1.csv  lnc2.csv  lnc38.csv  lnc56.csv  lnc58.csv  pro1.csv  pro15.csv  pro2.csv  pro3.csv  pro6.csv
data/: go.xlsx  ps.xlsx  swp.xlsx
dataset1/: fp.csv  go.csv  mp.csv  ps.csv  swp.csv
figure/: fusion_pr.txt  fusion_roc.txt  pr_ct_go.txt  pr_ct_ps.txt  pr_ct_sw.txt  pr_ep_go.txt  pr_ep_ps.txt  pr_ep_sw.txt  pr_fkl.txt  pr_mean.txt  pr_sw_go.txt  pr_sw_ps.txt  pr_sw_sw.txt  roc_ct_go.txt  roc_ct_ps.txt  roc_ct_sw.txt  roc_ep_go.txt  roc_ep_ps.txt  roc_ep_sw.txt  roc_fkl.txt  roc_mean.txt  roc_sw_go.txt  roc_sw_ps.txt  roc_sw_sw.txt
src/rascore/util/functions/: gui.py
src/rascore/util/pages/: home_page.py
util/functions/: gui.py  path.py
util/pages/: home_page.py  omic_learn_2.py  overview_page.py
utils/: ml_helper.py  plot_helper.py  session_states.py  ui_helper.py
