[tool.poetry]
name = "final_lpiweb" # 项目名称
version = "0.1.0" # 版本号
description = "A Streamlit app that uses Python libraries for machine learning and data analysis." # 描述
authors = ["Your Name <youremail@example.com>"] # 作者信息

[tool.poetry.dev-dependencies]
pytest = "^6.2"

# 新增 python 属性
[tool.poetry.dependencies]
torch = { version = "^1.11.0", python = ">=3.7.0" }
scipy = { version = "^1.10.1", python = ">=3.8,<3.12" }
plotly = { version = "^5.7.0", python = ">=3.6" }
statsmodels = { version = "^0.13.1", python = ">=3.7" }
pandas = "==1.3.5"
streamlit = "==1.21.0"
Pillow = "==9.0.1"
numpy = "==1.24.3"
tqdm = "==4.59.0"
requests = "==2.27.1"
bio = "==1.3.3"
scikit-learn = { version = "==0.24.1", optional = true } # 也可以选用 scikit-learn 包而不是 sklearn
matplotlib = "==3.6.0"
seaborn = "==0.11.1"
statannot = "==0.2.3"
lxml = "==4.6.5"
py3Dmol = "==2.0.0.post2"
stmol = "==0.0.7"
