[tool.poetry]
name = "final_lpiweb" # 项目名称
version = "0.1.0" # 版本号
description = "A Streamlit app that uses Python libraries for machine learning and data analysis." # 描述
authors = ["Your Name <youremail@example.com>"] # 作者信息

[tool.poetry.dev-dependencies]
pytest = "^6.2"

# 新增 python 属性
[tool.poetry.dependencies]
torch = { version = "^1.11.0", python = ">=3.7.0" }
scipy = { version = "^1.10.1", python = ">=3.8,<3.12" }
plotly = { version = "^5.7.0", python = ">=3.6" }
statsmodels = { version = "^0.13.1", python = ">=3.7" }
stmol = { version = "^0.0.7", python = ">=3.6" }
lxml = { version = "^4.6.5", python = ">=2.7,<2.8 || >=3.5.0" }
statannot = { version = "^0.2.3", python = ">=3.5" }
seaborn = { version = "^0.11.1", python = ">=3.6" }
matplotlib = { version = "^3.6.0", python = ">=3.8" }
scikit-learn = { version = "^0.24.1", python = ">=3.6" }
bio = { version = "^1.3.3", python = ">=3.6" }
requests = { version = "^2.27.1", python = ">=2.7,<2.8 || >=3.6.0" }
numpy = { version = "^1.24.3", python = ">=3.8" }
pillow = { version = "^9.0.1", python = ">=3.7" }
streamlit = { version = "^1.21.0", python = ">=3.7,<3.9.7 || >3.9.7" }
pandas = { version = "^1.3.5", python = ">=3.7.1" }
tqdm = "==4.59.0"
py3Dmol = "==2.0.0.post2"
